// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<OrderBook/> renders the order book with L2 data 1`] = `
<div
  className="order-book-asks"
>
  <div
    className="order-book-row"
    key="0"
  >
    <span
      className="order-book-row-price"
    >
      <span>
        <span
          className="highlight"
        >
          9415
        </span>
        <span
          className="highlight"
        >
          .
          035
        </span>
        <span>
          00000
        </span>
      </span>
    </span>
    <span
      className="order-book-row-quantity"
    >
      <span>
        <span
          className=""
        >
          0
        </span>
        <span
          className="highlight"
        >
          .
          07
        </span>
        <span>
          000000
        </span>
      </span>
    </span>
    <span
      className="order-book-row-open-orders"
    />
  </div>
  <div
    className="order-book-row"
    key="1"
  >
    <span
      className="order-book-row-price"
    >
      <span>
        <span
          className="highlight"
        >
          9417
        </span>
        <span
          className="highlight"
        >
          .
          53
        </span>
        <span>
          000000
        </span>
      </span>
    </span>
    <span
      className="order-book-row-quantity"
    >
      <span>
        <span
          className=""
        >
          0
        </span>
        <span
          className="highlight"
        >
          .
          01
        </span>
        <span>
          000000
        </span>
      </span>
    </span>
    <span
      className="order-book-row-open-orders"
    />
  </div>
</div>
`;

exports[`<OrderBook/> renders the order book with L2 data 2`] = `
<div
  className="order-book-bids"
>
  <div
    className="order-book-row"
    key="0"
  >
    <span
      className="order-book-row-price"
    >
      <span>
        <span
          className="highlight"
        >
          9410
        </span>
        <span
          className="highlight"
        >
          .
          84
        </span>
        <span>
          000000
        </span>
      </span>
    </span>
    <span
      className="order-book-row-quantity"
    >
      <span>
        <span
          className=""
        >
          0
        </span>
        <span
          className="highlight"
        >
          .
          189
        </span>
        <span>
          00000
        </span>
      </span>
    </span>
    <span
      className="order-book-row-open-orders"
    />
  </div>
  <div
    className="order-book-row"
    key="1"
  >
    <span
      className="order-book-row-price"
    >
      <span>
        <span
          className="highlight"
        >
          9413
        </span>
        <span
          className="highlight"
        >
          .
          74
        </span>
        <span>
          000000
        </span>
      </span>
    </span>
    <span
      className="order-book-row-quantity"
    >
      <span>
        <span
          className=""
        >
          0
        </span>
        <span
          className="highlight"
        >
          .
          4
        </span>
        <span>
          0000000
        </span>
      </span>
    </span>
    <span
      className="order-book-row-open-orders"
    />
  </div>
</div>
`;
